# sphinxcontrib-details-directive

./: pyproject.toml
sphinxcontrib/details/directive/: __init__.py
